# BookHub

./: .env.example  .pre-commit-config.yaml  Makefile  pyproject.toml
book_hub/api/: apps.py  permission.py  urls.py
book_hub/api/v1/books/: apis.py  serializers.py
book_hub/api/v1/genres/: serializers.py
book_hub/api/v1/review/: apis.py  serializers.py
book_hub/api/v1/users/: apis.py  serializers.py
book_hub/books/: admin.py  apps.py  entities.py  enums.py  models.py  selectors.py  services.py  urls.py
book_hub/books/migrations/: 0001_initial.py  0002_initial.py
book_hub/common/: apps.py  models.py
book_hub/reviews/: admin.py  apps.py  entities.py  models.py  selectors.py  services.py  urls.py
book_hub/reviews/migrations/: 0001_initial.py  0002_initial.py
book_hub/users/: admin.py  apps.py  entities.py  models.py  selectors.py  services.py  urls.py
book_hub/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
