[project]
name = "bookhoob"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail",email = "miplik@yandex.ru"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.7"
djangorestframework = "^3.16.1"
boto3 = "^1.40.69"
django-storages = "^1.14.6"
django-environ = "^0.12.0"
pillow = "^12.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
